log
Sat, Mar 22, 2025 10:33:09 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025 10:46:56 PM: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:4: error: statement with no effect [-Werror=unused-value]
    for(i; i <= 10; i++){
    ^~~
exercises.c: In function 'sumaLista':
exercises.c:68:24: error: passing argument 1 of 'next' from incompatible pointer type [-Werror=incompatible-pointer-types]
       elemento += next(&L);
                        ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:14:7: note: expected 'List * {aka struct List *}' but argument is of type 'List ** {aka struct List **}'
 void* next(List *L);
       ^~~~
In file included from test.c:5:0:
exercises.c:68:16: error: invalid operands to binary + (have 'int *' and 'void *')
       elemento += next(&L);
                ^~ ~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
61dea1f
Sat, Mar 22, 2025 11:24:09 PM: 
 exercises.c | 36 +++++++++++++++++++++++++++++++-----
 1 file changed, 31 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:4: error: statement with no effect [-Werror=unused-value]
    for(i; i <= 10; i++){
    ^~~
exercises.c:50:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elemento = (int *) malloc(sizeof(int));
                 ^
exercises.c: In function 'eliminaElementos':
exercises.c:86:4: error: invalid use of undefined type 'struct List'
    while(L[i]!= NULL)
    ^~~~~
exercises.c:86:11: error: dereferencing pointer to incomplete type 'List {aka struct List}'
    while(L[i]!= NULL)
           ^
exercises.c:88:7: error: invalid use of undefined type 'struct List'
       if (L[i] == elem )
       ^~
exercises.c:90:10: error: too many arguments to function 'popCurrent'
          popCurrent(L, i);
          ^~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: declared here
 void *popCurrent(List *L);
       ^~~~~~~~~~
In file included from test.c:5:0:
exercises.c:93:4: error: expected ';' before '}' token
    }
    ^
cc1.exe: all warnings being treated as errors
Compilation failed
a77467b
Sat, Mar 22, 2025 11:26:06 PM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:4: error: statement with no effect [-Werror=unused-value]
    for(i; i <= 10; i++){
    ^~~
exercises.c:49:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elemento = (int *) malloc(sizeof(int));
                 ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:4: error: invalid use of undefined type 'struct List'
    while(L[i]!= NULL)
    ^~~~~
exercises.c:85:11: error: dereferencing pointer to incomplete type 'List {aka struct List}'
    while(L[i]!= NULL)
           ^
exercises.c:87:7: error: invalid use of undefined type 'struct List'
       if (L[i] == elem)
       ^~
exercises.c:89:10: error: too many arguments to function 'popCurrent'
          popCurrent(L, i);
          ^~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: declared here
 void *popCurrent(List *L);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
845bcce
Sat, Mar 22, 2025 11:39:02 PM: 
 exercises.c | 20 +++++---------------
 1 file changed, 5 insertions(+), 15 deletions(-)
 tests:  0|3
total_score: 20/70
41025ba
Sat, Mar 22, 2025 11:45:04 PM: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:85:4: error: statement with no effect [-Werror=unused-value]
    for(i; i <get_size(L); i++)
    ^~~
exercises.c:87:7: error: invalid use of undefined type 'struct List'
       int comparador = *L[i];
       ^~~
exercises.c:87:26: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       int comparador = *L[i];
                          ^
exercises.c:90:10: error: too many arguments to function 'popCurrent'
          popCurrent(L, i);
          ^~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: declared here
 void *popCurrent(List *L);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4f0c85c
Sat, Mar 22, 2025 11:47:41 PM: 
 exercises.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  3|2
total_score: 40/70
516bcf1
Sat, Mar 22, 2025 11:48:23 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elemento = (int *) malloc(sizeof(int));
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
008aa27
Sat, Mar 22, 2025 11:48:51 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
722de32
Sat, Mar 22, 2025 11:51:12 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:129:16: error: passing argument 1 of 'get_size' from incompatible pointer type [-Werror=incompatible-pointer-types]
    if(get_size(cadena) % 2 == 0)
                ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:35:5: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 int get_size(List *L);
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
40c2fe6
Sat, Mar 22, 2025 11:55:44 PM: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 60/70
790e1ae
